Submitting update containing compiler warning fixes.